# ecgen-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  default.profraw  doc_output.txt  test_output.txt
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml  codecov.yml  rust.yml
benches/: main.rs  my_benchmark.rs
examples/: quickcheck_tests.rs
experiments/: diffset.rs  diffset2.rs  diffset3.rs  note2.md  notes.md
src/: combin.rs  diffset.rs  gray_code.rs  lib.rs  logging.rs  main.rs  perm.rs  set_bipart.rs  set_partition.rs  test_gray_code.cpp  test_perm.cpp  test_set_partition.cpp
