[package]
name = "ecgen-rs"
version = "0.1.0"
edition = "2021"
description = "Enumerative Combinatoric Generation in Rust"
repository = "https://github.com/luk036/ecgen-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ecgen"
path = "src/lib.rs"

[dependencies]
genawaiter = { version = "0.99.1", features = ["futures03"] }
