[package]
name = "ecgen-rs"
version = "0.1.3"
edition = "2021"
description = "Enumerative Combinatoric Generation in Rust"
repository = "https://github.com/luk036/ecgen-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.66"

[lib]
name = "ecgen"
path = "src/lib.rs"

[dependencies]
genawaiter = { version = "0.99.1", features = ["futures03"] }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = ["std"]
std = ["dep:log", "dep:env_logger"]
diffset = []

[dev-dependencies]
criterion = "0.7"
quickcheck = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1